--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.44.2
+Date: 2026-01-25
+  Changes:
+    - changed way you can make sand. Recipe is now named "Stone erosion" and can be selected in biochamber
+---------------------------------------------------------------------------------------------------
+Version: 0.44.1
+Date: 2026-01-24
+  Changes:
+    - fixed typo in locale
+---------------------------------------------------------------------------------------------------
 Version: 0.44.0
 Date: 2026-01-24
   Changes:
