--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.47.0
+Date: 2026-02-01
+  Changes:
+    - attempt of removing sealant from ships recipes will now cause runtime crash
+---------------------------------------------------------------------------------------------------
 Version: 0.46.0
 Date: 2026-01-31
   Changes:
