--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.50.0
+Date: 2026-02-08
+  Changes:
+    - replaced LUT by the ones made by shibadisaster. 
+    - changed barreling machine order in factoriopedia
+---------------------------------------------------------------------------------------------------
 Version: 0.49.0
 Date: 2026-02-07
   Changes:
