--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.50.1
+Date: 2026-02-09
+  Changes:
+    - changed lighthouse light intensity to make pelagos sea less green at night 
+---------------------------------------------------------------------------------------------------
 Version: 0.50.0
 Date: 2026-02-08
   Changes:
