--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.51.1
+Date: 2026-02-15
+  Changes:
+    - added german locale made by Schlumpf
+---------------------------------------------------------------------------------------------------
 Version: 0.51.0
 Date: 2026-02-14
   Changelog:
